--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,18 @@
     "slim/slim": "^3.5",
     "slim/twig-view": "^2.1"
   },
+  "require-dev" : {
+    "phpunit/phpunit" : "^5.0",
+    "mockery/mockery": "dev-master"
+  },
   "autoload" : {
     "psr-4" : {
       "Clone\\Twitter\\" : "src"
+    }
+  },
+  "autoload-dev" : {
+    "psr-4" : {
+      "Clone\\Twitter\\Tests\\" : "tests"
     }
   }
 }
