--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
   "require": {
     "slim/slim": "^3.5",
-    "slim/twig-view": "^2.1"
+    "slim/twig-view": "^2.1",
+    "zendframework/zend-db" : "^2.6"
   },
   "require-dev" : {
     "phpunit/phpunit" : "^5.0",
