--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "require": {
     "slim/slim": "^3.5",
     "slim/twig-view": "^2.1",
-    "zendframework/zend-db" : "^2.6"
+    "zendframework/zend-db" : "^2.6",
+    "robmorgan/phinx": "^0.6.4"
   },
   "require-dev" : {
     "phpunit/phpunit" : "^5.0",
